added machine update feature

--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_ca_ES.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_ca_ES.properties
@@ -66,6 +66,11 @@ ACTIVITY_VIEWER_MNEMONIC=V
 PATCH_CENTER=Centre de pedaç
 PATCH_CENTER_MNEMONIC=C
 COUNT=Total
+CHANGE_MACHINE=Canvia màquina
+CHANGE_MACHINE_MNEMONIC=M
+UPDATE_ALL_DATABASES=Actualitzar totes les bases de dades
+UPDATE_ALL_DATABASES_MNEMONIC=A
+TOTAL_UPDATED_PROFILES=Nombre de perfils actualitzats
 
 BR=Brasil
 ES=Espanya
