--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_de_DE.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_de_DE.properties
@@ -66,6 +66,11 @@ ACTIVITY_VIEWER_MNEMONIC=A
 PATCH_CENTER=Patch-Center
 PATCH_CENTER_MNEMONIC=P
 COUNT=Gesamt
+CHANGE_MACHINE=Maschine wechseln
+CHANGE_MACHINE_MNEMONIC=M
+UPDATE_ALL_DATABASES=Aller Datenbanken aktualisieren
+UPDATE_ALL_DATABASES_MNEMONIC=A
+TOTAL_UPDATED_PROFILES=Zahl der aktualisierte Profile
 
 BR=Brasilien
 ES=Spanien
