--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_es_ES.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_es_ES.properties
@@ -66,6 +66,11 @@ ACTIVITY_VIEWER_MNEMONIC=V
 PATCH_CENTER=Centro de parche
 PATCH_CENTER_MNEMONIC=C
 COUNT=Total
+CHANGE_MACHINE=Cambiar máquina
+CHANGE_MACHINE_MNEMONIC=M
+UPDATE_ALL_DATABASES=Actualizar todas las bases de datos
+UPDATE_ALL_DATABASES_MNEMONIC=A
+TOTAL_UPDATED_PROFILES=Número de perfiles actualizados
 
 BR=Brasil
 ES=España
