--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_fi_FI.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_fi_FI.properties
@@ -66,6 +66,11 @@ ACTIVITY_VIEWER_MNEMONIC=K
 PATCH_CENTER=Patch keskus
 PATCH_CENTER_MNEMONIC=P
 COUNT=Summa
+CHANGE_MACHINE=Vaihda tietokone
+CHANGE_MACHINE_MNEMONIC=V
+UPDATE_ALL_DATABASES=P‰ivitt‰‰ kaikki tietokannat
+UPDATE_ALL_DATABASES_MNEMONIC=P
+TOTAL_UPDATED_PROFILES=M‰‰r‰ p‰ivitetty profiileja
 
 BR=Brasilia
 ES=Espanja
