--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_fr_FR.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_fr_FR.properties
@@ -66,6 +66,11 @@ ACTIVITY_VIEWER_MNEMONIC=V
 PATCH_CENTER=Centre de correctif
 PATCH_CENTER_MNEMONIC=C
 COUNT=Total
+CHANGE_MACHINE=Changer machine
+CHANGE_MACHINE_MNEMONIC=M
+UPDATE_ALL_DATABASES=Mettre à jour toutes les bases de données
+UPDATE_ALL_DATABASES_MNEMONIC=M
+TOTAL_UPDATED_PROFILES=Nombre de profils mis à jour
 
 BR=Brésil
 ES=Espagne
