--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_nl_NL.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_nl_NL.properties
@@ -66,6 +66,11 @@ ACTIVITY_VIEWER_MNEMONIC=A
 PATCH_CENTER=Patchcentrum
 PATCH_CENTER_MNEMONIC=P
 COUNT=Telling
+CHANGE_MACHINE=Machine wijzigen
+CHANGE_MACHINE_MNEMONIC=M
+UPDATE_ALL_DATABASES=Bijwerken alle databases
+UPDATE_ALL_DATABASES_MNEMONIC=B
+TOTAL_UPDATED_PROFILES=Aantal bijgewerkt profielen
 
 BR=Brazilië
 ES=Spanje
