--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_pl_PL.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_pl_PL.properties
@@ -66,6 +66,11 @@ ACTIVITY_VIEWER_MNEMONIC=P
 PATCH_CENTER=Centrum poprawka
 PATCH_CENTER_MNEMONIC=C
 COUNT=Suma
+CHANGE_MACHINE=Zmienianie komputer
+CHANGE_MACHINE_MNEMONIC=Z
+UPDATE_ALL_DATABASES=Aktualizacja wszystkich baz
+UPDATE_ALL_DATABASES_MNEMONIC=A
+TOTAL_UPDATED_PROFILES=Llo\u015B\u0107 zaktualizowane profile
 
 BR=Brazylia
 ES=Hiszpania
