--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_pt_BR.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_pt_BR.properties
@@ -66,6 +66,11 @@ ACTIVITY_VIEWER_MNEMONIC=V
 PATCH_CENTER=Centro de patch
 PATCH_CENTER_MNEMONIC=C
 COUNT=Total
+CHANGE_MACHINE=Mudar máquina
+CHANGE_MACHINE_MNEMONIC=M
+UPDATE_ALL_DATABASES=Atualizar todos os banco de dados
+UPDATE_ALL_DATABASES_MNEMONIC=A
+TOTAL_UPDATED_PROFILES=Número de perfis atualizados
 
 BR=Brasil
 ES=Espanha
