--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_sv_SE.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_sv_SE.properties
@@ -66,6 +66,11 @@ ACTIVITY_VIEWER_MNEMONIC=A
 PATCH_CENTER=Korrigering-center
 PATCH_CENTER_MNEMONIC=K
 COUNT=Summa
+CHANGE_MACHINE=Ändra maskin
+CHANGE_MACHINE_MNEMONIC=M
+UPDATE_ALL_DATABASES=Uppdatera alla databaser
+UPDATE_ALL_DATABASES_MNEMONIC=U
+TOTAL_UPDATED_PROFILES=Antal uppdaterade profiler
 
 BR=Brasilien
 ES=Spanien
