--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_en_US.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_en_US.properties
@@ -66,6 +66,11 @@ ACTIVITY_VIEWER_MNEMONIC=A
 PATCH_CENTER=Patch Center
 PATCH_CENTER_MNEMONIC=P
 COUNT=Total
+CHANGE_MACHINE=Change Machine
+CHANGE_MACHINE_MNEMONIC=M
+UPDATE_ALL_DATABASES=Update All Databases
+UPDATE_ALL_DATABASES_MNEMONIC=U
+TOTAL_UPDATED_PROFILES=Total updated profiles
 
 BR=Brazil
 ES=Spain
