--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_fa_IR.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_fa_IR.properties
@@ -66,6 +66,11 @@ ACTIVITY_VIEWER_MNEMONIC=X
 PATCH_CENTER=\u0645\u0631\u06A9\u0632 \u0648\u0635\u0644\u0647
 PATCH_CENTER_MNEMONIC=X
 COUNT=\u062A\u0639\u062F\u0627\u062F
+CHANGE_MACHINE=\u062A\u063A\u06CC\u06CC\u0631 \u062F\u0633\u062A\u06AF\u0627\u0647
+CHANGE_MACHINE_MNEMONIC=X
+UPDATE_ALL_DATABASES=\u0628\u0647 \u0631\u0648\u0632 \u0631\u0633\u0627\u0646\u06CC \u067E\u0627\u06CC\u06AF\u0627\u0647 \u062F\u0627\u062F\u0647
+UPDATE_ALL_DATABASES_MNEMONIC=X
+TOTAL_UPDATED_PROFILES=\u062A\u0639\u062F\u0627\u062F \u067E\u0631\u0648\u0641\u0627\u06CC\u0644 \u0647\u0627\u06CC \u0628\u0647 \u0631\u0648\u0632 \u0634\u062F\u0647
 
 BR=\u0628\u0631\u0632\u06CC\u0644
 ES=\u0627\u0633\u067E\u0627\u0646\u06CC\u0627
