--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_it_IT.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_it_IT.properties
@@ -66,6 +66,11 @@ ACTIVITY_VIEWER_MNEMONIC=V
 PATCH_CENTER=Centro patch
 PATCH_CENTER_MNEMONIC=C
 COUNT=Totale
+CHANGE_MACHINE=Cambia macchina
+CHANGE_MACHINE_MNEMONIC=M
+UPDATE_ALL_DATABASES=Aggiorna tutti i database
+UPDATE_ALL_DATABASES_MNEMONIC=A
+TOTAL_UPDATED_PROFILES=Numero di profili aggiornati
 
 BR=Brasile
 ES=Spagna
