--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_ja_JP.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_ja_JP.properties
@@ -66,6 +66,11 @@ ACTIVITY_VIEWER_MNEMONIC=X
 PATCH_CENTER=\u30D1\u30C3\u30C1\u30BB\u30F3\u30BF\u30FC
 PATCH_CENTER_MNEMONIC=X
 COUNT=\u5408\u8A08
+CHANGE_MACHINE=\u30DE\u30B7\u30F3\u306E\u5909\u66F4
+CHANGE_MACHINE_MNEMONIC=X
+UPDATE_ALL_DATABASES=\u3059\u3079\u3066\u306E\u30C7\u30FC\u30BF\u30D9\u30FC\u30B9\u3092\u66F4\u65B0\u3059\u308B
+UPDATE_ALL_DATABASES_MNEMONIC=X
+TOTAL_UPDATED_PROFILES=\u66F4\u65B0\u3055\u308C\u305F\u30D7\u30ED\u30D5\u30A1\u30A4\u30EB\u306E\u6570
 
 BR=\u30D6\u30E9\u30B8\u30EB
 ES=\u30B9\u30DA\u30A4\u30F3
