--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_ko_KR.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_ko_KR.properties
@@ -66,6 +66,11 @@ ACTIVITY_VIEWER_MNEMONIC=X
 PATCH_CENTER=\uD328\uCE58 \uC13C\uD130
 PATCH_CENTER_MNEMONIC=X
 COUNT=\uCD1D\uACC4
+CHANGE_MACHINE=\uCEF4\uD4E8\uD130 \uBCC0\uACBD
+CHANGE_MACHINE_MNEMONIC=X
+UPDATE_ALL_DATABASES=\uBAA8\uB4E0 \uB370\uC774\uD130\uBCA0\uC774\uC2A4\uB97C \uC5C5\uB370\uC774\uD2B8
+UPDATE_ALL_DATABASES_MNEMONIC=X
+TOTAL_UPDATED_PROFILES=\uC5C5\uB370\uC774\uD2B8 \uB41C \uD504\uB85C\uD544\uC758 \uC218
 
 BR=\uBE0C\uB77C\uC9C8
 ES=\uC2A4\uD398\uC778
