--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_ru_RU.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_ru_RU.properties
@@ -66,6 +66,11 @@ ACTIVITY_VIEWER_MNEMONIC=X
 PATCH_CENTER=\u0418\u0441\u043F\u0440\u0430\u0432\u043B\u0435\u043D\u0438\u0435 \u0446\u0435\u043D\u0442\u0440
 PATCH_CENTER_MNEMONIC=X
 COUNT=\u0418\u0442\u043E\u0433
+CHANGE_MACHINE=\u0421\u043C\u0435\u043D\u0438\u0442\u044C \u043A\u043E\u043C\u043F\u044C\u044E\u0442\u0435\u0440
+CHANGE_MACHINE_MNEMONIC=X
+UPDATE_ALL_DATABASES=\u041E\u0431\u043D\u043E\u0432\u0438\u0442\u044C \u0432\u0441\u0435 \u0431\u0430\u0437\u044B \u0434\u0430\u043D\u043D\u044B\u0445
+UPDATE_ALL_DATABASES_MNEMONIC=X
+TOTAL_UPDATED_PROFILES=\u041A\u043E\u043B\u0438\u0447\u0435\u0441\u0442\u0432\u043E \u043E\u0431\u043D\u043E\u0432\u043B\u0435\u043D\u043D\u044B\u0445 \u043F\u0440\u043E\u0444\u0438\u043B\u0435\u0439
 
 BR=\u0411\u0440\u0430\u0437\u0438\u043B\u0438\u044F
 ES=\u0418\u0441\u043F\u0430\u043D\u0438\u044F
