--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_zh_TW.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_zh_TW.properties
@@ -66,6 +66,11 @@ ACTIVITY_VIEWER_MNEMONIC=X
 PATCH_CENTER=\u4FEE\u88DC\u4E2D\u5FC3
 PATCH_CENTER_MNEMONIC=X
 COUNT=\u7E3D\u5171
+CHANGE_MACHINE=\u8B8A\u66F4\u6A5F\u5668
+CHANGE_MACHINE_MNEMONIC=X
+UPDATE_ALL_DATABASES=\u66F4\u65B0\u6240\u6709\u6578\u64DA\u5EAB
+UPDATE_ALL_DATABASES_MNEMONIC=X
+TOTAL_UPDATED_PROFILES=\u66F4\u65B0\u7684\u914D\u7F6E\u6587\u4EF6\u6578\u91CF
 
 BR=\u5DF4\u897F
 ES=\u897F\u73ED\u7259
