added database backup support to machine update (and refactored code in the process)

--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_it_IT.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_it_IT.properties
@@ -58,7 +58,7 @@ DATABASE_OPTIONS=Opzioni di database
 PROFILE_NAME=Nome profilo
 USE_FILENAME=Usa nome del file
 GET_FROM_OPENMSX=Importa da openMSX
-BACKUP_EXISTING_DATABASE=Backup esistente
+BACKUP_EXISTING_DATABASE=Backup database esistente
 BACKUPS=Backup
 DELETE_CONFIRMATION=Elimina?
 ACTIVITY_VIEWER=Visualizzatore attività
