--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MachineUpdateWindow_ca_ES.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MachineUpdateWindow_ca_ES.properties
@@ -2,3 +2,4 @@ UPDATE_CURRENT_DATABASE=Actualitza la base de dades actual
 CHANGE_ALL_TO=Canvia totes a
 CHANGE_FROM=Canvia de
 TO=a
+BACKUP_AFFECTED_DATABASES=Fes còpies de seguretat de les bases de dades afectades
