--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MachineUpdateWindow_de_DE.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MachineUpdateWindow_de_DE.properties
@@ -2,3 +2,4 @@ UPDATE_CURRENT_DATABASE=Aktuelle Datenbank aktualisieren
 CHANGE_ALL_TO=Alles ändern zu
 CHANGE_FROM=Ändern von
 TO=zu
+BACKUP_AFFECTED_DATABASES=Betroffene Datenbanken sichern
