--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MachineUpdateWindow_en_US.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MachineUpdateWindow_en_US.properties
@@ -2,3 +2,4 @@ UPDATE_CURRENT_DATABASE=Update Current Database
 CHANGE_ALL_TO=Change all to
 CHANGE_FROM=Change from
 TO=to
+BACKUP_AFFECTED_DATABASES=Backup Affected Databases
