--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MachineUpdateWindow_es_ES.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MachineUpdateWindow_es_ES.properties
@@ -2,3 +2,4 @@ UPDATE_CURRENT_DATABASE=Actualizar base de datos actual
 CHANGE_ALL_TO=Cambiar todas a
 CHANGE_FROM=Cambiar de
 TO=a
+BACKUP_AFFECTED_DATABASES=Respaldar bases de datos afectadas
