--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MachineUpdateWindow_fa_IR.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MachineUpdateWindow_fa_IR.properties
@@ -2,3 +2,4 @@ UPDATE_CURRENT_DATABASE=\u0628\u0647\u0631\u0648\u0632\u0631\u0633\u0627\u0646\u
 CHANGE_ALL_TO=\u062A\u063A\u06CC\u06CC\u0631 \u0647\u0645\u0647 \u0628\u0647
 CHANGE_FROM=\u062A\u063A\u06CC\u06CC\u0631 \u0627\u0632
 TO=\u0628\u0647
+BACKUP_AFFECTED_DATABASES=\u067E\u0634\u062A\u06CC\u0628\u0627\u0646 \u06AF\u06CC\u0631\u06CC \u067E\u0627\u06CC\u06AF\u0627\u0647 \u0647\u0627\u06CC \u062F\u0627\u062F\u0647 \u0628\u0647 \u0631\u0648\u0632 \u0634\u062F\u0647
