--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MachineUpdateWindow_fi_FI.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MachineUpdateWindow_fi_FI.properties
@@ -2,3 +2,4 @@ UPDATE_CURRENT_DATABASE=P‰ivitt‰‰ nykyinen tietokanta
 CHANGE_ALL_TO=Muuta kaikki kohteeseen
 CHANGE_FROM=Muuta luota
 TO=vaille
+BACKUP_AFFECTED_DATABASES=Varmuuskopioi tietokannat
