--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MachineUpdateWindow_fr_FR.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MachineUpdateWindow_fr_FR.properties
@@ -2,3 +2,4 @@ UPDATE_CURRENT_DATABASE=Mettre à jour la base de données actuelle
 CHANGE_ALL_TO=Changer tout à
 CHANGE_FROM=Changer de
 TO=à
+BACKUP_AFFECTED_DATABASES=Sauvegarder bases de données affectées
