--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MachineUpdateWindow_it_IT.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MachineUpdateWindow_it_IT.properties
@@ -2,3 +2,4 @@ UPDATE_CURRENT_DATABASE=Aggiorna il database corrente
 CHANGE_ALL_TO=Cambia tutte a
 CHANGE_FROM=Cambia da
 TO=a
+BACKUP_AFFECTED_DATABASES=Backup database interessati
