--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MachineUpdateWindow_ja_JP.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MachineUpdateWindow_ja_JP.properties
@@ -2,3 +2,4 @@ UPDATE_CURRENT_DATABASE=\u73FE\u5728\u306E\u30C7\u30FC\u30BF\u30D9\u30FC\u30B9\u
 CHANGE_ALL_TO=\u3059\u3079\u3066\u3092\u5909\u66F4
 CHANGE_FROM=\u304B\u3089\u306E\u5909\u66F4
 TO=\u306B
+BACKUP_AFFECTED_DATABASES=\u5909\u66F4\u524D\u306B\u30C7\u30FC\u30BF\u30D9\u30FC\u30B9\u3092\u30D0\u30C3\u30AF\u30A2\u30C3\u30D7\u3059\u308B
