--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MachineUpdateWindow_nl_NL.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MachineUpdateWindow_nl_NL.properties
@@ -2,3 +2,4 @@ UPDATE_CURRENT_DATABASE=Bijwerken huidige database
 CHANGE_ALL_TO=Wijzigen alles naar
 CHANGE_FROM=Wijzigen van 
 TO=naar
+BACKUP_AFFECTED_DATABASES=Backuppen beïnvloedde databases
