--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MachineUpdateWindow_pl_PL.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MachineUpdateWindow_pl_PL.properties
@@ -2,3 +2,4 @@ UPDATE_CURRENT_DATABASE=Zaktualizuj bie\u017C\u0105c\u0105 baz\u0119 danych
 CHANGE_ALL_TO=Zmie\u0144 wszystko na
 CHANGE_FROM=Zmie\u0144 si\u0119 z
 TO=na
+BACKUP_AFFECTED_DATABASES=Wykonaj kopie zapasowe baz danych
