--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MachineUpdateWindow_pt_BR.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MachineUpdateWindow_pt_BR.properties
@@ -2,3 +2,4 @@ UPDATE_CURRENT_DATABASE=Atualizar o banco de dados atual
 CHANGE_ALL_TO=Mudar todas para
 CHANGE_FROM=Mudar de
 TO=para
+BACKUP_AFFECTED_DATABASES=Respaldar bancos de dados afetados
