--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MachineUpdateWindow_sv_SE.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MachineUpdateWindow_sv_SE.properties
@@ -2,3 +2,4 @@ UPDATE_CURRENT_DATABASE=Uppdatera nuvarande databas
 CHANGE_ALL_TO=Ändra allt till
 CHANGE_FROM=Ändra från
 TO=till
+BACKUP_AFFECTED_DATABASES=Säkerhetskopiera berörda databaser
