--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MachineUpdateWindow_ko_KR.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MachineUpdateWindow_ko_KR.properties
@@ -2,3 +2,4 @@ UPDATE_CURRENT_DATABASE=\uD604\uC7AC \uB370\uC774\uD130\uBCA0\uC774\uC2A4 \uC5C5
 CHANGE_ALL_TO=\uBAA8\uB450\uB97C \uC73C\uB85C \uBCC0\uACBD
 CHANGE_FROM=\uC5D0\uC11C \uBCC0\uACBD
 TO=\uC73C\uB85C
+BACKUP_AFFECTED_DATABASES=\uBCC0\uACBD \uB0B4\uC6A9 \uBC30\uD3EC \uC804 \uB370\uC774\uD130\uBCA0\uC774\uC2A4 \uBC31\uC5C5
