--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MachineUpdateWindow_zh_TW.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MachineUpdateWindow_zh_TW.properties
@@ -2,3 +2,4 @@ UPDATE_CURRENT_DATABASE=\u66F4\u65B0\u7576\u524D\u6578\u64DA\u5EAB
 CHANGE_ALL_TO=\u6539\u8B8A\u4E00\u5207
 CHANGE_FROM=\u66F4\u6539\u5F9E
 TO=\u70BA
+BACKUP_AFFECTED_DATABASES=\u5099\u4EFD\u8CC7\u6599\u5EAB
