added support for reading a new disks XML database file to show more details for disk images

--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_ca_ES.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_ca_ES.properties
@@ -73,6 +73,7 @@ UPDATE_ALL_DATABASES_MNEMONIC=A
 TOTAL_UPDATED_PROFILES=Nombre de perfils actualitzats
 
 BR=Brasil
+DE=Alemanya
 ES=Espanya
 FR=França
 GB=Gran Bretanya
