--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_fi_FI.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_fi_FI.properties
@@ -73,6 +73,7 @@ UPDATE_ALL_DATABASES_MNEMONIC=P
 TOTAL_UPDATED_PROFILES=M‰‰r‰ p‰ivitetty profiileja
 
 BR=Brasilia
+DE=Saksa
 ES=Espanja
 FR=Ranska
 GB=Britannia
