--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_it_IT.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_it_IT.properties
@@ -73,6 +73,7 @@ UPDATE_ALL_DATABASES_MNEMONIC=A
 TOTAL_UPDATED_PROFILES=Numero di profili aggiornati
 
 BR=Brasile
+DE=Germania
 ES=Spagna
 FR=Francia
 GB=Gran Bretagna
