--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_nl_NL.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_nl_NL.properties
@@ -73,6 +73,7 @@ UPDATE_ALL_DATABASES_MNEMONIC=B
 TOTAL_UPDATED_PROFILES=Aantal bijgewerkt profielen
 
 BR=Brazilië
+DE=Duitsland
 ES=Spanje
 FR=Frankrijk
 GB=Groot-Brittannië
