--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_pl_PL.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_pl_PL.properties
@@ -73,6 +73,7 @@ UPDATE_ALL_DATABASES_MNEMONIC=A
 TOTAL_UPDATED_PROFILES=Llo\u015B\u0107 zaktualizowane profile
 
 BR=Brazylia
+DE=Niemcy
 ES=Hiszpania
 FR=Francja
 GB=Wielka Brytania
