--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_sv_SE.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_sv_SE.properties
@@ -73,6 +73,7 @@ UPDATE_ALL_DATABASES_MNEMONIC=U
 TOTAL_UPDATED_PROFILES=Antal uppdaterade profiler
 
 BR=Brasilien
+DE=Tyskland
 ES=Spanien
 FR=Frankrike
 GB=Storbritannien
