--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_de_DE.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_de_DE.properties
@@ -73,6 +73,7 @@ UPDATE_ALL_DATABASES_MNEMONIC=A
 TOTAL_UPDATED_PROFILES=Zahl der aktualisierte Profile
 
 BR=Brasilien
+DE=Deutschland
 ES=Spanien
 FR=Frankreich
 GB=Britannien
