--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_es_ES.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_es_ES.properties
@@ -73,6 +73,7 @@ UPDATE_ALL_DATABASES_MNEMONIC=A
 TOTAL_UPDATED_PROFILES=Número de perfiles actualizados
 
 BR=Brasil
+DE=Alemania
 ES=España
 FR=Francia
 GB=Gran Bretaña
