--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_fr_FR.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_fr_FR.properties
@@ -73,6 +73,7 @@ UPDATE_ALL_DATABASES_MNEMONIC=M
 TOTAL_UPDATED_PROFILES=Nombre de profils mis à jour
 
 BR=Brésil
+DE=Allemagne
 ES=Espagne
 FR=France
 GB=Grande-Bretagne
