--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/GamePropertiesWindow_ru_RU.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/GamePropertiesWindow_ru_RU.properties
@@ -1,3 +1,4 @@
+COMMON_NAME=\u041E\u0431\u0449\u0435\u0435 \u0438\u043C\u044F
 FILE=\u0424\u0430\u0439\u043B
 DUMP=Dump
 REMARK=\u041A\u043E\u043C\u043C\u0435\u043D\u0442\u0430\u0440\u0438\u0439
