use 'common name' to describe source of profile name instead of openMSX to include the dsk and tape XML databases

--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_ca_ES.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_ca_ES.properties
@@ -57,7 +57,7 @@ TOTAL_ADDED_TO_DATABASE=Nombre de perfils afegits
 DATABASE_OPTIONS=Opcions de base de dades
 PROFILE_NAME=Nom del perfil
 USE_FILENAME=Utilitza nom del fitxer
-GET_FROM_OPENMSX=Importa de openMSX
+USE_COMMON_NAME=Utilitza nom comú
 BACKUP_EXISTING_DATABASE=Fes una còpia de seguretat de la base de dades existent
 BACKUPS=Còpies de seguretat
 DELETE_CONFIRMATION=Suprimeix?
