--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_de_DE.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_de_DE.properties
@@ -57,7 +57,7 @@ TOTAL_ADDED_TO_DATABASE=Zahl der zugegebenen Profilen
 DATABASE_OPTIONS=Datenbank-Optionen
 PROFILE_NAME=Profilname
 USE_FILENAME=Dateiname verwenden
-GET_FROM_OPENMSX=Aus openMSX importieren
+USE_COMMON_NAME=Gemeinsamer Name verwenden
 BACKUP_EXISTING_DATABASE=Vorhandene Datenbank sichern
 BACKUPS=Sicherungen
 DELETE_CONFIRMATION=Löschen?
