--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_en_US.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_en_US.properties
@@ -57,7 +57,7 @@ TOTAL_ADDED_TO_DATABASE=Total added profiles
 DATABASE_OPTIONS=Database Options
 PROFILE_NAME=Profile name
 USE_FILENAME=Use filename
-GET_FROM_OPENMSX=Get from openMSX
+USE_COMMON_NAME=Use common name
 BACKUP_EXISTING_DATABASE=Backup existing database
 BACKUPS=Backups
 DELETE_CONFIRMATION=Delete?
