--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_es_ES.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_es_ES.properties
@@ -57,7 +57,7 @@ TOTAL_ADDED_TO_DATABASE=Número de perfiles añadidos
 DATABASE_OPTIONS=Opciones de base de datos
 PROFILE_NAME=Nombre de perfil
 USE_FILENAME=Usar nombre del archivo
-GET_FROM_OPENMSX=Importar de openMSX
+USE_COMMON_NAME=Usar nombre común
 BACKUP_EXISTING_DATABASE=Respaldar base de datos existente
 BACKUPS=Copias de seguridad
 DELETE_CONFIRMATION=¿Eliminar?
