--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_fi_FI.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_fi_FI.properties
@@ -57,7 +57,7 @@ TOTAL_ADDED_TO_DATABASE=M‰‰r‰ lis‰t‰‰n profiileja
 DATABASE_OPTIONS=Tietokanta asetukset
 PROFILE_NAME=Profiilin nimi
 USE_FILENAME=K‰yt‰ tiedoston nimi
-GET_FROM_OPENMSX=Tuo openMSX-muodosta
+USE_COMMON_NAME=K‰yt‰ kutsumanimi
 BACKUP_EXISTING_DATABASE=Varmuuskopioi nykyiset tietokanta
 BACKUPS=Varmuuskopiot
 DELETE_CONFIRMATION=Poista?
