--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_fr_FR.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_fr_FR.properties
@@ -57,7 +57,7 @@ TOTAL_ADDED_TO_DATABASE=Nombre de profils ajoutés
 DATABASE_OPTIONS=Options de base de données
 PROFILE_NAME=Nom du profil
 USE_FILENAME=Utiliser nom de fichier
-GET_FROM_OPENMSX=Importer de openMSX
+USE_COMMON_NAME=Utiliser nom commun
 BACKUP_EXISTING_DATABASE=Sauvegarder base de données existante
 BACKUPS=Sauvegardes
 DELETE_CONFIRMATION=Supprimer?
