--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_it_IT.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_it_IT.properties
@@ -57,7 +57,7 @@ TOTAL_ADDED_TO_DATABASE=Numero di profili aggiunti
 DATABASE_OPTIONS=Opzioni di database
 PROFILE_NAME=Nome profilo
 USE_FILENAME=Usa nome del file
-GET_FROM_OPENMSX=Importa da openMSX
+USE_COMMON_NAME=Usa nome comune
 BACKUP_EXISTING_DATABASE=Backup database esistente
 BACKUPS=Backup
 DELETE_CONFIRMATION=Elimina?
