--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_ja_JP.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_ja_JP.properties
@@ -57,7 +57,7 @@ TOTAL_ADDED_TO_DATABASE=\u8FFD\u52A0\u3055\u308C\u305F\u30D7\u30ED\u30D5\u30A1\u
 DATABASE_OPTIONS=\u30C7\u30FC\u30BF\u30D9\u30FC\u30B9\u306E\u30AA\u30D7\u30B7\u30E7\u30F3
 PROFILE_NAME=\u30D7\u30ED\u30D5\u30A1\u30A4\u30EB\u540D
 USE_FILENAME=\u30D5\u30A1\u30A4\u30EB\u540D\u3092\u4F7F\u7528
-GET_FROM_OPENMSX=openMSX \u304B\u3089\u30A4\u30F3\u30DD\u30FC\u30C8
+USE_COMMON_NAME=\u5171\u901A\u540D\u3092\u4F7F\u7528\u3059\u308B
 BACKUP_EXISTING_DATABASE=\u5909\u66F4\u524D\u306B\u30C7\u30FC\u30BF\u30D9\u30FC\u30B9\u3092\u30D0\u30C3\u30AF\u30A2\u30C3\u30D7\u3059\u308B
 BACKUPS=\u30D0\u30C3\u30AF\u30A2\u30C3\u30D7
 DELETE_CONFIRMATION=\u524A\u9664?
