--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_ko_KR.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_ko_KR.properties
@@ -57,7 +57,7 @@ TOTAL_ADDED_TO_DATABASE=\uCD94\uAC00 \uD504\uB85C\uD30C\uC77C\uC758 \uC218
 DATABASE_OPTIONS=\uB370\uC774\uD130\uBCA0\uC774\uC2A4 \uC635\uC158
 PROFILE_NAME=\uD504\uB85C\uD544 \uC774\uB984
 USE_FILENAME=\uD30C\uC77C \uC774\uB984\uC744 \uC0AC\uC6A9
-GET_FROM_OPENMSX=openMSX\uC5D0\uC11C \uAC00\uC838 \uC624\uAE30
+USE_COMMON_NAME=\uC77C\uBC18 \uC774\uB984 \uC0AC\uC6A9
 BACKUP_EXISTING_DATABASE=\uBCC0\uACBD \uB0B4\uC6A9 \uBC30\uD3EC \uC804 \uB370\uC774\uD130\uBCA0\uC774\uC2A4 \uBC31\uC5C5
 BACKUPS=\uBC31\uC5C5
 DELETE_CONFIRMATION=\uC0AD\uC81C?
