--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_nl_NL.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_nl_NL.properties
@@ -57,7 +57,7 @@ TOTAL_ADDED_TO_DATABASE=Aantal toegevoegde profielen
 DATABASE_OPTIONS=Database opties
 PROFILE_NAME=Profielnaam
 USE_FILENAME=Gebruiken bestandnaam
-GET_FROM_OPENMSX=Ophalen uit openMSX
+USE_COMMON_NAME=Gebruiken algemene naam
 BACKUP_EXISTING_DATABASE=Backuppen bestaande database
 BACKUPS=Back-ups
 DELETE_CONFIRMATION=Verwijderen?
