--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_pl_PL.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_pl_PL.properties
@@ -57,7 +57,7 @@ TOTAL_ADDED_TO_DATABASE=Llo\u015B\u0107 dodane profile
 DATABASE_OPTIONS=Opcje bazy danych
 PROFILE_NAME=Nazwa profilu
 USE_FILENAME=U\u017Cywa\u0107 nazwy pliku
-GET_FROM_OPENMSX=Importuj z openMSX
+USE_COMMON_NAME=U\u017Cywa\u0107 przydomek
 BACKUP_EXISTING_DATABASE=Kopia zapasowa istniej\u0105ca baza danych
 BACKUPS=Kopie zapasowe
 DELETE_CONFIRMATION=Usun\u0105\u0107?
