--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_pt_BR.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_pt_BR.properties
@@ -57,7 +57,7 @@ TOTAL_ADDED_TO_DATABASE=Número de perfis adicionados
 DATABASE_OPTIONS=Opções de banco de dados
 PROFILE_NAME=Nome do perfil
 USE_FILENAME=Usar nome do arquivo
-GET_FROM_OPENMSX=Importar de openMSX
+USE_COMMON_NAME=Usar nome comum
 BACKUP_EXISTING_DATABASE=Respaldar banco de dados existente
 BACKUPS=Backups
 DELETE_CONFIRMATION=Eliminar?
