--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_sv_SE.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_sv_SE.properties
@@ -57,7 +57,7 @@ TOTAL_ADDED_TO_DATABASE=Antal tillsatta profiler
 DATABASE_OPTIONS=Databasegenskaper
 PROFILE_NAME=Profilnamn
 USE_FILENAME=Används filnamn
-GET_FROM_OPENMSX=Importera från openMSX
+USE_COMMON_NAME=Används eget namn
 BACKUP_EXISTING_DATABASE=Säkerhetskopiera befintlig databas
 BACKUPS=Säkerhetskopior
 DELETE_CONFIRMATION=Ta bort?
