--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_zh_CN.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_zh_CN.properties
@@ -57,7 +57,7 @@ TOTAL_ADDED_TO_DATABASE=\u6DFB\u52A0\u7684\u914D\u7F6E\u6587\u4EF6\u6570\u91CF
 DATABASE_OPTIONS=\u6570\u636E\u5E93\u9009\u9879
 PROFILE_NAME=\u914D\u7F6E\u6587\u4EF6\u540D
 USE_FILENAME=\u4F7F\u7528\u6587\u4EF6\u540D
-GET_FROM_OPENMSX=\u5BFC\u5165\u81EA openMSX
+USE_COMMON_NAME=\u4F7F\u7528\u516C\u7528\u540D
 BACKUP_EXISTING_DATABASE=\u5728\u66F4\u6539\u4E4B\u524D\u5907\u4EFD\u6570\u636E\u5E93
 BACKUPS=\u5907\u4EFD
 DELETE_CONFIRMATION=\u5220\u9664?
