--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_zh_TW.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_zh_TW.properties
@@ -57,7 +57,7 @@ TOTAL_ADDED_TO_DATABASE=\u6DFB\u52A0\u7684\u914D\u7F6E\u6587\u4EF6\u6578\u91CF
 DATABASE_OPTIONS=\u8CC7\u6599\u5EAB\u9078\u9805
 PROFILE_NAME=\u8A2D\u5B9A\u6A94\u540D\u7A31
 USE_FILENAME=\u4F7F\u7528\u6587\u4EF6\u540D
-GET_FROM_OPENMSX=\u5C0E\u5165\u81EA openMSX
+USE_COMMON_NAME=\u4F7F\u7528\u4E00\u822C\u540D\u7A31
 BACKUP_EXISTING_DATABASE=\u5728\u8B8A\u66F4\u4E4B\u524D\u5099\u4EFD\u8CC7\u6599\u5EAB
 BACKUPS=\u5099\u4EFD
 DELETE_CONFIRMATION=\u522A\u9664?
