Second phase of 'MSX News' feature - still needs some more work

--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_ca_ES.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_ca_ES.properties
@@ -21,3 +21,4 @@ EDIT_UNTITLED_FILTER=Edita filtre sense títol
 UPDATE_ALL_DATABASES_CONFIRMATION_MESSAGE=Actualitzar totes les bases de dades?
 TOOLS=Eines
 TOOLS_MNEMONIC=E
+FEED=Notícies de MSX
