--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_de_DE.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_de_DE.properties
@@ -21,3 +21,4 @@ EDIT_UNTITLED_FILTER=Unbenannte Filter bearbeiten
 UPDATE_ALL_DATABASES_CONFIRMATION_MESSAGE=Aller Datenbanken aktualisieren?
 TOOLS=Extras
 TOOLS_MNEMONIC=E
+FEED=MSX Nachrichten
