--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_es_ES.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_es_ES.properties
@@ -21,3 +21,4 @@ EDIT_UNTITLED_FILTER=Editar filtro sin título
 UPDATE_ALL_DATABASES_CONFIRMATION_MESSAGE=¿Actualizar todas las bases de datos?
 TOOLS=Herramientas
 TOOLS_MNEMONIC=H
+FEED=Noticias de MSX
