--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_fa_IR.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_fa_IR.properties
@@ -21,3 +21,4 @@ EDIT_UNTITLED_FILTER=\u0648\u06CC\u0631\u0627\u06CC\u0634 \u0641\u06CC\u0644\u06
 UPDATE_ALL_DATABASES_CONFIRMATION_MESSAGE=\u0622\u06CC\u0627 \u0645\u06CC \u062E\u0648\u0627\u0647\u06CC\u062F \u067E\u0627\u06CC\u06AF\u0627\u0647 \u062F\u0627\u062F\u0647 \u0631\u0627 \u0628\u0647 \u0631\u0648\u0632 \u0631\u0633\u0627\u0646\u06CC \u0643\u0646\u064A\u062F\u061F
 TOOLS=\u0627\u0628\u0632\u0627\u0631
 TOOLS_MNEMONIC=X
+FEED=\u0627\u062E\u0628\u0627\u0631 MSX
