--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_fi_FI.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_fi_FI.properties
@@ -21,3 +21,4 @@ EDIT_UNTITLED_FILTER=Muokkaa nimetön suodatin
 UPDATE_ALL_DATABASES_CONFIRMATION_MESSAGE=Päivittää kaikki tietokannat?
 TOOLS=Työkalut
 TOOLS_MNEMONIC=Y
+FEED=MSX uutisia
