--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_fr_FR.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_fr_FR.properties
@@ -21,3 +21,4 @@ EDIT_UNTITLED_FILTER=Modifier filtre sans titre
 UPDATE_ALL_DATABASES_CONFIRMATION_MESSAGE=Mettre à jour toutes les bases de données?
 TOOLS=Outils
 TOOLS_MNEMONIC=U
+FEED=MSX Actualités
