--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_it_IT.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_it_IT.properties
@@ -21,3 +21,4 @@ EDIT_UNTITLED_FILTER=Modifica filtro senza titolo
 UPDATE_ALL_DATABASES_CONFIRMATION_MESSAGE=Aggiorna tutti i database?
 TOOLS=Strumenti
 TOOLS_MNEMONIC=S
+FEED=Notizie di MSX
