--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_ja_JP.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_ja_JP.properties
@@ -21,3 +21,4 @@ EDIT_UNTITLED_FILTER=\u7121\u984C\u306E\u30D5\u30A3\u30EB\u30BF\u306E\u7DE8\u96C
 UPDATE_ALL_DATABASES_CONFIRMATION_MESSAGE=\u3059\u3079\u3066\u306E\u30C7\u30FC\u30BF\u30D9\u30FC\u30B9\u3092\u66F4\u65B0\u3059\u308B?
 TOOLS=\u30C4\u30FC\u30EB
 TOOLS_MNEMONIC=X
+FEED=MSX\u30CB\u30E5\u30FC\u30B9
