--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_ko_KR.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_ko_KR.properties
@@ -21,3 +21,4 @@ EDIT_UNTITLED_FILTER=\uC81C\uBAA9 \uC5C6\uC74C \uD544\uD130 \uD3B8\uC9D1
 UPDATE_ALL_DATABASES_CONFIRMATION_MESSAGE=\uBAA8\uB4E0 \uB370\uC774\uD130\uBCA0\uC774\uC2A4\uB97C \uC5C5\uB370\uC774\uD2B8?
 TOOLS=\uB3C4\uAD6C
 TOOLS_MNEMONIC=X
+FEED=MSX \uB274\uC2A4
