--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_pl_PL.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_pl_PL.properties
@@ -21,3 +21,4 @@ EDIT_UNTITLED_FILTER=Edytuj filtr bez nazwy
 UPDATE_ALL_DATABASES_CONFIRMATION_MESSAGE=Aktualizacja wszystkich baz danych?
 TOOLS=Narz\u0119dzia
 TOOLS_MNEMONIC=N
+FEED=MSX Newsy
