--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_pt_BR.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_pt_BR.properties
@@ -21,3 +21,4 @@ EDIT_UNTITLED_FILTER=Editar filtro sem título
 UPDATE_ALL_DATABASES_CONFIRMATION_MESSAGE=Atualizar todos os banco de dados?
 TOOLS=Ferramentas
 TOOLS_MNEMONIC=F
+FEED=Notícias do MSX
