--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_ru_RU.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_ru_RU.properties
@@ -21,3 +21,4 @@ EDIT_UNTITLED_FILTER=\u0418\u0437\u043C\u0435\u043D\u0438\u0442\u044C \u0444\u04
 UPDATE_ALL_DATABASES_CONFIRMATION_MESSAGE=\u041E\u0431\u043D\u043E\u0432\u0438\u0442\u044C \u0432\u0441\u0435 \u0431\u0430\u0437\u044B \u0434\u0430\u043D\u043D\u044B\u0445?
 TOOLS=\u0418\u043D\u0441\u0442\u0440\u0443\u043C\u0435\u043D\u0442\u044B
 TOOLS_MNEMONIC=X
+FEED=\u041D\u043E\u0432\u043E\u0441\u0442\u0438 MSX
