--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_sv_SE.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_sv_SE.properties
@@ -21,3 +21,4 @@ EDIT_UNTITLED_FILTER=Redigera namnlös filter
 UPDATE_ALL_DATABASES_CONFIRMATION_MESSAGE=Uppdatera alla databaser?
 TOOLS=Verktyg
 TOOLS_MNEMONIC=V
+FEED=MSX Nyheter
