--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_zh_CN.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_zh_CN.properties
@@ -21,3 +21,4 @@ EDIT_UNTITLED_FILTER=\u66F4\u6539\u89C6\u56FE\u65E0\u9898
 UPDATE_ALL_DATABASES_CONFIRMATION_MESSAGE=\u66F4\u65B0\u6240\u6709\u6570\u636E\u5E93?
 TOOLS=\u5DE5\u5177
 TOOLS_MNEMONIC=X
+FEED=MSX\u65B0\u95FB
