--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_zh_TW.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_zh_TW.properties
@@ -21,3 +21,4 @@ EDIT_UNTITLED_FILTER=\u66F4\u6539\u8996\u5716\u7121\u984C
 UPDATE_ALL_DATABASES_CONFIRMATION_MESSAGE=\u66F4\u65B0\u6240\u6709\u6578\u64DA\u5EAB?
 TOOLS=\u5DE5\u5177
 TOOLS_MNEMONIC=X
+FEED=MSX\u65B0\u805E
