--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/SettingsWindow_de_DE.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/SettingsWindow_de_DE.properties
@@ -19,3 +19,4 @@ PORTUGUESE=Portugiesisch
 RUSSIAN=Russisch
 SPANISH=Spanisch
 SWEDISH=Schwedisch
+ENABLE_MSX_NEWS_SERVICE=MSX-Nachrichtendienst aktivieren
