--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/SettingsWindow_fr_FR.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/SettingsWindow_fr_FR.properties
@@ -19,3 +19,4 @@ PORTUGUESE=Portugais
 RUSSIAN=Russe
 SPANISH=Espagnol
 SWEDISH=Suédois
+ENABLE_MSX_NEWS_SERVICE=Activer le service de nouvelles de MSX
