--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/SettingsWindow_it_IT.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/SettingsWindow_it_IT.properties
@@ -19,3 +19,4 @@ PORTUGUESE=Portoghese
 RUSSIAN=Russo
 SPANISH=Spagnolo
 SWEDISH=Svedese
+ENABLE_MSX_NEWS_SERVICE=Abilita servizio di notizie di MSX
