--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/SettingsWindow_ja_JP.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/SettingsWindow_ja_JP.properties
@@ -19,3 +19,4 @@ PORTUGUESE=\u30DD\u30EB\u30C8\u30AC\u30EB\u8A9E
 RUSSIAN=\u30ED\u30B7\u30A2\u8A9E
 SPANISH=\u30B9\u30DA\u30A4\u30F3\u8A9E
 SWEDISH=\u30B9\u30A6\u30A7\u30FC\u30C7\u30F3\u8A9E
+ENABLE_MSX_NEWS_SERVICE=MSX\u30CB\u30E5\u30FC\u30B9\u30B5\u30FC\u30D3\u30B9\u6709\u52B9\u306B\u3059\u308B
