--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/SettingsWindow_ko_KR.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/SettingsWindow_ko_KR.properties
@@ -19,3 +19,4 @@ PORTUGUESE=\uD3EC\uB974\uD22C\uAC08\uC5B4
 RUSSIAN=\uB7EC\uC2DC\uC544\uC5B4
 SPANISH=\uC2A4\uD398\uC778\uC5B4
 SWEDISH=\uC2A4\uC6E8\uB374\uC5B4
+ENABLE_MSX_NEWS_SERVICE=MSX \uB274\uC2A4 \uC11C\uBE44\uC2A4 \uC0AC\uC6A9
