--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/SettingsWindow_pl_PL.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/SettingsWindow_pl_PL.properties
@@ -19,3 +19,4 @@ PORTUGUESE=Portugalski
 RUSSIAN=Rosyjski
 SPANISH=Hiszpa\u0144ski
 SWEDISH=Szwedzki
+ENABLE_MSX_NEWS_SERVICE=W\u0142\u0105cz serwis informacyjny MSX
