--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/SettingsWindow_zh_CN.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/SettingsWindow_zh_CN.properties
@@ -19,3 +19,4 @@ PORTUGUESE=\u8461\u8404\u7259
 RUSSIAN=\u4FC4\u8BED
 SPANISH=\u897F\u73ED\u7259
 SWEDISH=\u745E\u5178
+ENABLE_MSX_NEWS_SERVICE=\u542F\u7528MSX\u65B0\u95FB\u670D\u52A1
