--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/SettingsWindow_zh_TW.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/SettingsWindow_zh_TW.properties
@@ -19,3 +19,4 @@ PORTUGUESE=\u8461\u8404\u7259\u6587
 RUSSIAN=\u4FC4\u6587
 SPANISH=\u897F\u73ED\u7259\u6587
 SWEDISH=\u745E\u5178\u6587
+ENABLE_MSX_NEWS_SERVICE=\u555F\u7528MSX\u65B0\u805E\u670D\u52D9
