--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_ar_KW.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_ar_KW.properties
@@ -21,3 +21,4 @@ EDIT_UNTITLED_FILTER=\u062A\u062D\u0631\u064A\u0631 \u0639\u0627\u0645\u0644 \u0
 UPDATE_ALL_DATABASES_CONFIRMATION_MESSAGE=\u062A\u062D\u062F\u064A\u062B \u0643\u0627\u0641\u0629 \u0642\u0648\u0627\u0639\u062F \u0627\u0644\u0628\u064A\u0627\u0646\u0627\u062A\u061F
 TOOLS=\u0623\u062F\u0648\u0627\u062A
 TOOLS_MNEMONIC=X
+FEED=\u0623\u062E\u0628\u0627\u0631 \u0627\u0644MSX
