--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_en_US.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_en_US.properties
@@ -21,3 +21,4 @@ EDIT_UNTITLED_FILTER=Edit Untitled Filter
 UPDATE_ALL_DATABASES_CONFIRMATION_MESSAGE=Update all databases?
 TOOLS=Tools
 TOOLS_MNEMONIC=T
+FEED=MSX News
