--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_nl_NL.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_nl_NL.properties
@@ -21,3 +21,4 @@ EDIT_UNTITLED_FILTER=Naamloze filter aanpassen
 UPDATE_ALL_DATABASES_CONFIRMATION_MESSAGE=Bijwerken alle databases?
 TOOLS=Extra
 TOOLS_MNEMONIC=E
+FEED=MSX Nieuws
