--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/SettingsWindow_fa_IR.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/SettingsWindow_fa_IR.properties
@@ -19,3 +19,4 @@ PORTUGUESE=\u067E\u0631\u062A\u063A\u0627\u0644\u06CC
 RUSSIAN=\u0631\u0648\u0633\u06CC
 SPANISH=\u0627\u0633\u067E\u0627\u0646\u06CC\u0627\u06CC\u06CC
 SWEDISH=\u0633\u0648\u0626\u062F\u0649
+ENABLE_MSX_NEWS_SERVICE=\u0641\u0639\u0627\u0644 \u0633\u0627\u0632\u06CC \u062E\u062F\u0645\u0627\u062A \u062E\u0628\u0631\u06CC MSX
