added complete support for 'MSX News' feature

--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_de_DE.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_de_DE.properties
@@ -22,3 +22,4 @@ UPDATE_ALL_DATABASES_CONFIRMATION_MESSAGE=Aller Datenbanken aktualisieren?
 TOOLS=Extras
 TOOLS_MNEMONIC=E
 FEED=MSX Nachrichten
+FEED_PROCESSING_MESSAGE=Versuchen Sie es in ein paar Sekunden erneut
