--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_en_US.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_en_US.properties
@@ -22,3 +22,4 @@ UPDATE_ALL_DATABASES_CONFIRMATION_MESSAGE=Update all databases?
 TOOLS=Tools
 TOOLS_MNEMONIC=T
 FEED=MSX News
+FEED_PROCESSING_MESSAGE=Try again after few seconds
