--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_fi_FI.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_fi_FI.properties
@@ -22,3 +22,4 @@ UPDATE_ALL_DATABASES_CONFIRMATION_MESSAGE=Päivittää kaikki tietokannat?
 TOOLS=Työkalut
 TOOLS_MNEMONIC=Y
 FEED=MSX uutisia
+FEED_PROCESSING_MESSAGE=Yritä uudelleen muutamassa sekunnissa
