--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_fr_FR.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_fr_FR.properties
@@ -22,3 +22,4 @@ UPDATE_ALL_DATABASES_CONFIRMATION_MESSAGE=Mettre à jour toutes les bases de donn
 TOOLS=Outils
 TOOLS_MNEMONIC=U
 FEED=MSX Actualités
+FEED_PROCESSING_MESSAGE=Réessayer dans quelques secondes
