--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_it_IT.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_it_IT.properties
@@ -22,3 +22,4 @@ UPDATE_ALL_DATABASES_CONFIRMATION_MESSAGE=Aggiorna tutti i database?
 TOOLS=Strumenti
 TOOLS_MNEMONIC=S
 FEED=Notizie di MSX
+FEED_PROCESSING_MESSAGE=Riprova dopo alcuni secondi
