--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_pl_PL.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_pl_PL.properties
@@ -22,3 +22,4 @@ UPDATE_ALL_DATABASES_CONFIRMATION_MESSAGE=Aktualizacja wszystkich baz danych?
 TOOLS=Narz\u0119dzia
 TOOLS_MNEMONIC=N
 FEED=MSX Newsy
+FEED_PROCESSING_MESSAGE=Spróbuj ponownie po kilku sekundach
