--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_sv_SE.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_sv_SE.properties
@@ -22,3 +22,4 @@ UPDATE_ALL_DATABASES_CONFIRMATION_MESSAGE=Uppdatera alla databaser?
 TOOLS=Verktyg
 TOOLS_MNEMONIC=V
 FEED=MSX Nyheter
+FEED_PROCESSING_MESSAGE=Försök igen om några sekunder
