--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_zh_CN.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_zh_CN.properties
@@ -22,3 +22,4 @@ UPDATE_ALL_DATABASES_CONFIRMATION_MESSAGE=\u66F4\u65B0\u6240\u6709\u6570\u636E\u
 TOOLS=\u5DE5\u5177
 TOOLS_MNEMONIC=X
 FEED=MSX\u65B0\u95FB
+FEED_PROCESSING_MESSAGE=\u5728\u51E0\u79D2\u949F\u540E\u518D\u8BD5\u4E00\u6B21
