--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_zh_TW.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_zh_TW.properties
@@ -22,3 +22,4 @@ UPDATE_ALL_DATABASES_CONFIRMATION_MESSAGE=\u66F4\u65B0\u6240\u6709\u6578\u64DA\u
 TOOLS=\u5DE5\u5177
 TOOLS_MNEMONIC=X
 FEED=MSX\u65B0\u805E
+FEED_PROCESSING_MESSAGE=\u5728\u5E7E\u79D2\u9418\u5F8C\u518D\u8A66\u4E00\u6B21
