--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_ar_KW.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_ar_KW.properties
@@ -22,3 +22,4 @@ UPDATE_ALL_DATABASES_CONFIRMATION_MESSAGE=\u062A\u062D\u062F\u064A\u062B \u0643\
 TOOLS=\u0623\u062F\u0648\u0627\u062A
 TOOLS_MNEMONIC=X
 FEED=\u0623\u062E\u0628\u0627\u0631 \u0627\u0644MSX
+FEED_PROCESSING_MESSAGE=\u0625\u0639\u0627\u062F\u0629 \u0627\u0644\u0645\u062D\u0627\u0648\u0644\u0629 \u0628\u0639\u062F \u0628\u0636\u0639 \u062B\u0648\u0627\u0646\u064D
