--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_ca_ES.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_ca_ES.properties
@@ -22,3 +22,4 @@ UPDATE_ALL_DATABASES_CONFIRMATION_MESSAGE=Actualitzar totes les bases de dades?
 TOOLS=Eines
 TOOLS_MNEMONIC=E
 FEED=Notícies de MSX
+FEED_PROCESSING_MESSAGE=Torna a provar-ho després de pocs segons
