--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_es_ES.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_es_ES.properties
@@ -22,3 +22,4 @@ UPDATE_ALL_DATABASES_CONFIRMATION_MESSAGE=¿Actualizar todas las bases de datos?
 TOOLS=Herramientas
 TOOLS_MNEMONIC=H
 FEED=Noticias de MSX
+FEED_PROCESSING_MESSAGE=Volver a intentar transcurridos unos segundos
