--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_fa_IR.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_fa_IR.properties
@@ -22,3 +22,4 @@ UPDATE_ALL_DATABASES_CONFIRMATION_MESSAGE=\u0622\u06CC\u0627 \u0645\u06CC \u062E
 TOOLS=\u0627\u0628\u0632\u0627\u0631
 TOOLS_MNEMONIC=X
 FEED=\u0627\u062E\u0628\u0627\u0631 MSX
+FEED_PROCESSING_MESSAGE=\u0686\u0646\u062F \u062B\u0627\u0646\u06CC\u0647 \u062F\u0648\u0628\u0627\u0631\u0647 \u0627\u0645\u062A\u062D\u0627\u0646 \u06A9\u0646\u06CC\u062F
