--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_ja_JP.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_ja_JP.properties
@@ -22,3 +22,4 @@ UPDATE_ALL_DATABASES_CONFIRMATION_MESSAGE=\u3059\u3079\u3066\u306E\u30C7\u30FC\u
 TOOLS=\u30C4\u30FC\u30EB
 TOOLS_MNEMONIC=X
 FEED=MSX\u30CB\u30E5\u30FC\u30B9
+FEED_PROCESSING_MESSAGE=\u6570\u79D2\u5F8C\u306B\u3082\u3046\u4E00\u5EA6\u304A\u8A66\u3057\u304F\u3060\u3055\u3044
