--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_nl_NL.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_nl_NL.properties
@@ -22,3 +22,4 @@ UPDATE_ALL_DATABASES_CONFIRMATION_MESSAGE=Bijwerken alle databases?
 TOOLS=Extra
 TOOLS_MNEMONIC=E
 FEED=MSX Nieuws
+FEED_PROCESSING_MESSAGE=Probeer het nog een paar seconden opnieuw
