--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_pt_BR.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/MainWindow_pt_BR.properties
@@ -22,3 +22,4 @@ UPDATE_ALL_DATABASES_CONFIRMATION_MESSAGE=Atualizar todos os banco de dados?
 TOOLS=Ferramentas
 TOOLS_MNEMONIC=F
 FEED=Notícias do MSX
+FEED_PROCESSING_MESSAGE=Tentar novamente em alguns segundos
